Use Class.getConstructor.newInstance() rather than JDK11-deprecated Class.getInstance().